# upscale

./: LICENSE  README.md  pyproject.toml
.github/workflows/: autofix-python.yml  code_linter.yml
src/realesrgan_upscaler/: main.py
upscale/: scaler.py
